tests/snapshots/run_wpt_conformance__coreml_reduceSum_float32_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum.https.any.js reduceSum float32 4D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceSumInput' must be of rank 3, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumInput: f32[2, 2, 2, 3];
  }

  nodes {
    [reduceSumOutput] = reduceSum(reduceSumInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceSumOutput; }
}
