tests/snapshots/run_wpt_conformance__coreml_relu_int64_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
relu.https.any.js relu int64 4D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { tensor<uint8, [...]>, tensor<int8, [...]>, tensor<int32, [...]>, tensor<fp16, [...]>, tensor<uint16, [...]>, tensor<int16, [...]>, tensor<fp32, [...]>, tensor<bool, [...]> }; got tensor<int64, [1, 1, 1, 5]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reluInput: i64[1, 1, 1, 5];
  }

  nodes {
    [reluOutput] = relu(reluInput, label="");
  }

  outputs { reluOutput; }
}
