tests/snapshots/run_wpt_conformance__coreml_relu_int8_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
relu.https.any.js relu int8 4D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type relu: Param 'x' has incorrect type for operator 'ios16.relu'. Expected { tensor<fp32, [...]>, tensor<fp16, [...]> }; got tensor<int8, [1, 2, 2, 1]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reluInput: i8[1, 2, 2, 1];
  }

  nodes {
    [reluOutput] = relu(reluInput, label="");
  }

  outputs { reluOutput; }
}
