tests/snapshots/run_wpt_conformance__coreml_scatterElements_float32_tensors_along_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
scatterElements.https.any.js scatterElements float32 tensors along axis 0, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Failed to read int32 value because field number 1 uses wireType 2. It should have used wireType 0.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    indices: i32[2, 3];
    input: f32[3, 3];
    updates: f32[2, 3];
  }

  nodes {
    [output] = scatterElements(input, indices, updates, axis=0, label="");
  }

  outputs { output; }
}
