tests/snapshots/run_wpt_conformance__coreml_sigmoid_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sigmoid.https.any.js sigmoid float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983331280_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([8, 182, 123, 185, 253, 197, 111, 68, 130, 187, 151, 68, 3, 193, 69, 62, 49, 193, 46, 185, 91, 65, 54, 194, 132, 64, 150, 180, 164, 68, 62, 60, 19, 195, 15, 55, 203, 68, 38, 64, 175, 58, 111, 197, 47, 196, 248, 192]);
  }

  nodes {
    [sigmoidOutput] = sigmoid(operand_0, label="");
  }

  outputs { sigmoidOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983331280_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
